a1/brendan_gordon/TEST_PROGRAMS/invalidtype/stefan_knudsen/undeclaredInAssign.min
var x : int;
var y : int;
z = x + y;

